# searchApp

./: app.py  pyproject.toml
static/: main.js
templates/: base.html
