[tool.poetry]
name = "appli-flask-basic"
version = "0.1.0"
description = ""
authors = ["OraNoota <orane.c@noota.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
